Adding Scality Rest Block driver
Implements blueprint srb-driver,
named srb.py for <Scality Rest Block>. It is a similar approach as
Ceph's RBD in the way it provides Block devices to the system.

Add the driver to control a kernel REST block driver through /sys
which uses LVM for snapshot management. The native block driver talks
through a REST API to Scality's Storage (support file system semantics),
and might support more vendors in the future.

Incidentally adds methods destroy_vg(), extend_thinpool(), pv_resize()
to brick/local_dev/lvm.py as a dep, with the associated test update.

LVM+Volume group management done by using temporary LVM objects.
iSCSI for export to nova (Future plans: add a own transport 'protocol')

Note: this driver also defines it own retry decorator, as well as
monkey-patches the brick's LVM activate_lv method for its own needs.
It is open to discussion whether those ways are the right ones or not,
but it at least allows going forward for this driver.

Change-Id: Id8d00df9db4004d5aeb8c0269d114ef50e0b8f8e

--- a/etc/cinder/cinder.conf.sample
+++ b/etc/cinder/cinder.conf.sample
@@ -2144,6 +2144,15 @@
 
 
 #
+# Options defined in cinder.volume.drivers.srb
+#
+
+# Comma-separated list of REST servers to connect to (string
+# value)
+#srb_base_urls=<None>
+
+
+#
 # Options defined in cinder.volume.drivers.vmware.vmdk
 #
 
